@@ -438,6 +438,34 @@ name|put
 argument_list|(
 name|CfgProp
 operator|.
+name|SOLR_COLLECTIONSHANDLER
+argument_list|,
+name|doSub
+argument_list|(
+literal|"solr/str[@name='collectionsHandler']"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|propMap
+operator|.
+name|put
+argument_list|(
+name|CfgProp
+operator|.
+name|SOLR_INFOHANDLER
+argument_list|,
+name|doSub
+argument_list|(
+literal|"solr/str[@name='infoHandler']"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|propMap
+operator|.
+name|put
+argument_list|(
+name|CfgProp
+operator|.
 name|SOLR_CORELOADTHREADS
 argument_list|,
 name|doSub
