@@ -727,6 +727,42 @@ name|put
 argument_list|(
 name|CfgProp
 operator|.
+name|SOLR_COLLECTIONSHANDLER
+argument_list|,
+name|config
+operator|.
+name|getVal
+argument_list|(
+literal|"solr/cores/@collectionsHandler"
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|propMap
+operator|.
+name|put
+argument_list|(
+name|CfgProp
+operator|.
+name|SOLR_INFOHANDLER
+argument_list|,
+name|config
+operator|.
+name|getVal
+argument_list|(
+literal|"solr/cores/@infoHandler"
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|propMap
+operator|.
+name|put
+argument_list|(
+name|CfgProp
+operator|.
 name|SOLR_DISTRIBUPDATECONNTIMEOUT
 argument_list|,
 name|config
