@@ -1119,28 +1119,44 @@ argument_list|)
 expr_stmt|;
 name|collectionsHandler
 operator|=
-operator|new
-name|CollectionsHandler
+name|createHandler
 argument_list|(
-name|this
+name|cfg
+operator|.
+name|getCollectionsHandlerClass
+argument_list|()
+argument_list|,
+name|CollectionsHandler
+operator|.
+name|class
 argument_list|)
 expr_stmt|;
 name|infoHandler
 operator|=
-operator|new
-name|InfoHandler
+name|createHandler
 argument_list|(
-name|this
+name|cfg
+operator|.
+name|getInfoHandlerClass
+argument_list|()
+argument_list|,
+name|InfoHandler
+operator|.
+name|class
 argument_list|)
 expr_stmt|;
 name|coreAdminHandler
 operator|=
-name|createMultiCoreHandler
+name|createHandler
 argument_list|(
 name|cfg
 operator|.
 name|getCoreAdminHandlerClass
 argument_list|()
+argument_list|,
+name|CoreAdminHandler
+operator|.
+name|class
 argument_list|)
 expr_stmt|;
 name|containerProperties
@@ -3728,7 +3744,7 @@ return|return
 literal|null
 return|;
 block|}
-comment|/**     * Gets a core by name and increase its refcount.    *    * @see SolrCore#close()     * @param name the core name    * @return the core if found, null if a SolrCore by this name does not exist    * @exception SolrException if a SolrCore with this name failed to be initialized    */
+comment|/**    * Gets a core by name and increase its refcount.    *    * @see SolrCore#close()    * @param name the core name    * @return the core if found, null if a SolrCore by this name does not exist    * @exception SolrException if a SolrCore with this name failed to be initialized    */
 DECL|method|getCore
 specifier|public
 name|SolrCore
@@ -3954,28 +3970,51 @@ return|return
 name|core
 return|;
 block|}
-comment|// ---------------- Multicore self related methods ---------------
-comment|/**     * Creates a CoreAdminHandler for this MultiCore.    * @return a CoreAdminHandler    */
-DECL|method|createMultiCoreHandler
+comment|// ---------------- CoreContainer request handlers --------------
+DECL|method|createHandler
 specifier|protected
-name|CoreAdminHandler
-name|createMultiCoreHandler
+parameter_list|<
+name|T
+parameter_list|>
+name|T
+name|createHandler
 parameter_list|(
-specifier|final
 name|String
-name|adminHandlerClass
+name|handlerClass
+parameter_list|,
+name|Class
+argument_list|<
+name|T
+argument_list|>
+name|clazz
 parameter_list|)
 block|{
 return|return
 name|loader
 operator|.
-name|newAdminHandlerInstance
+name|newInstance
 argument_list|(
+name|handlerClass
+argument_list|,
+name|clazz
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|Class
+index|[]
+block|{
 name|CoreContainer
 operator|.
-name|this
+name|class
+block|}
 argument_list|,
-name|adminHandlerClass
+operator|new
+name|Object
+index|[]
+block|{
+name|this
+block|}
 argument_list|)
 return|;
 block|}
@@ -4009,6 +4048,7 @@ return|return
 name|infoHandler
 return|;
 block|}
+comment|// ---------------- Multicore self related methods ---------------
 comment|/**    * the default core name, or null if there is no default core name    */
 DECL|method|getDefaultCoreName
 specifier|public
