@@ -74,6 +74,54 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CollectionsHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|InfoHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|AfterClass
@@ -215,6 +263,34 @@ operator|.
 name|jar
 operator|.
 name|JarOutputStream
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|hamcrest
+operator|.
+name|core
+operator|.
+name|Is
+operator|.
+name|is
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|hamcrest
+operator|.
+name|core
+operator|.
+name|IsInstanceOf
+operator|.
+name|instanceOf
 import|;
 end_import
 
@@ -1561,6 +1637,232 @@ literal|"<solr>\n"
 operator|+
 literal|"</solr>"
 decl_stmt|;
+DECL|field|CUSTOM_HANDLERS_SOLR_XML
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|CUSTOM_HANDLERS_SOLR_XML
+init|=
+literal|"<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n"
+operator|+
+literal|"<solr>"
+operator|+
+literal|"<str name=\"collectionsHandler\">"
+operator|+
+name|CustomCollectionsHandler
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"</str>"
+operator|+
+literal|"<str name=\"infoHandler\">"
+operator|+
+name|CustomInfoHandler
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"</str>"
+operator|+
+literal|"<str name=\"adminHandler\">"
+operator|+
+name|CustomCoreAdminHandler
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|"</str>"
+operator|+
+literal|"</solr>"
+decl_stmt|;
+DECL|class|CustomCollectionsHandler
+specifier|public
+specifier|static
+class|class
+name|CustomCollectionsHandler
+extends|extends
+name|CollectionsHandler
+block|{
+DECL|method|CustomCollectionsHandler
+specifier|public
+name|CustomCollectionsHandler
+parameter_list|(
+name|CoreContainer
+name|cc
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|cc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|class|CustomInfoHandler
+specifier|public
+specifier|static
+class|class
+name|CustomInfoHandler
+extends|extends
+name|InfoHandler
+block|{
+DECL|method|CustomInfoHandler
+specifier|public
+name|CustomInfoHandler
+parameter_list|(
+name|CoreContainer
+name|cc
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|cc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|class|CustomCoreAdminHandler
+specifier|public
+specifier|static
+class|class
+name|CustomCoreAdminHandler
+extends|extends
+name|CoreAdminHandler
+block|{
+DECL|method|CustomCoreAdminHandler
+specifier|public
+name|CustomCoreAdminHandler
+parameter_list|(
+name|CoreContainer
+name|cc
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|cc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testCustomHandlers
+specifier|public
+name|void
+name|testCustomHandlers
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ConfigSolr
+name|config
+init|=
+name|ConfigSolr
+operator|.
+name|fromString
+argument_list|(
+name|CUSTOM_HANDLERS_SOLR_XML
+argument_list|)
+decl_stmt|;
+name|SolrResourceLoader
+name|loader
+init|=
+operator|new
+name|SolrResourceLoader
+argument_list|(
+literal|"solr/collection1"
+argument_list|)
+decl_stmt|;
+name|CoreContainer
+name|cc
+init|=
+operator|new
+name|CoreContainer
+argument_list|(
+name|loader
+argument_list|,
+name|config
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|cc
+operator|.
+name|load
+argument_list|()
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|cc
+operator|.
+name|getCollectionsHandler
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|instanceOf
+argument_list|(
+name|CustomCollectionsHandler
+operator|.
+name|class
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|cc
+operator|.
+name|getInfoHandler
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|instanceOf
+argument_list|(
+name|CustomInfoHandler
+operator|.
+name|class
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|cc
+operator|.
+name|getMultiCoreHandler
+argument_list|()
+argument_list|,
+name|is
+argument_list|(
+name|instanceOf
+argument_list|(
+name|CustomCoreAdminHandler
+operator|.
+name|class
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
