@@ -269,6 +269,46 @@ literal|"Did not find expected value"
 argument_list|,
 name|cfg
 operator|.
+name|get
+argument_list|(
+name|ConfigSolr
+operator|.
+name|CfgProp
+operator|.
+name|SOLR_COLLECTIONSHANDLER
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+literal|"testCollectionsHandler"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Did not find expected value"
+argument_list|,
+name|cfg
+operator|.
+name|get
+argument_list|(
+name|ConfigSolr
+operator|.
+name|CfgProp
+operator|.
+name|SOLR_INFOHANDLER
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+literal|"testInfoHandler"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Did not find expected value"
+argument_list|,
+name|cfg
+operator|.
 name|getInt
 argument_list|(
 name|ConfigSolr
